src/AutoStep/Language/Interaction/Parser/AutoStepInteractionsParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.8
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from .\AutoStepInteractionsParser.g4 by ANTLR 4.8

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace AutoStep.Language.Interaction.Parser {
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.8")]
[System.CLSCompliant(false)]
internal partial class AutoStepInteractionsParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		APP_DEFINITION=1, TRAIT_DEFINITION=2, COMPONENT_DEFINITION=3, COLLECTION_DEFINITION=4, 
		TRAITS_KEYWORD=5, NAME_KEYWORD=6, COMPONENTS_KEYWORD=7, INHERITS_KEYWORD=8, 
		STEP_DEFINE=9, LIST_SEPARATOR=10, DEF_SEPARATOR=11, NEEDS_DEFINING=12, 
		METHOD_OPEN=13, NAME_REF=14, PLUS=15, COMPONENT_INSERT=16, FUNC_PASS_MARKER=17, 
		STRING=18, NEWLINE=19, TEXT_DOC_COMMENT=20, TEXT_COMMENT=21, WS=22, ERR_CHAR=23, 
		METHOD_STRING_START=24, CONSTANT=25, PARAM_NAME=26, ARR_LEFT=27, ARR_RIGHT=28, 
		PARAM_SEPARATOR=29, FLOAT=30, INT=31, METHOD_CLOSE=32, METH_WS=33, STR_ANGLE_LEFT=34, 
		METHOD_STR_ESCAPE_QUOTE=35, METHOD_STRING_END=36, METHOD_STRING_ERRNL=37, 
		STR_CONTENT=38, STR_NAME_REF=39, STR_ANGLE_RIGHT=40, DEF_GIVEN=41, DEF_WHEN=42, 
		DEF_THEN=43, DEF_ESCAPED_LCURLY=44, DEF_ESCAPED_RCURLY=45, DEF_LCURLY=46, 
		DEF_RCURLY=47, DEF_NEWLINE=48, DEF_WS=49, DEF_COLON=50, DEF_COMPONENT_INSERT=51, 
		DEF_WORD=52, DEF_COMMENT=53, SINGLE_METHOD_STR_ESCAPE_QUOTE=54, SINGLE_METHOD_STRING_END=55;
	public const int
		RULE_file = 0, RULE_entityDefinition = 1, RULE_appDefinition = 2, RULE_appItem = 3, 
		RULE_traitDefinition = 4, RULE_traitRefList = 5, RULE_traitItem = 6, RULE_methodDefinition = 7, 
		RULE_methodDeclaration = 8, RULE_methodDefArgs = 9, RULE_methodCallChain = 10, 
		RULE_methodCall = 11, RULE_methodCallArgs = 12, RULE_methodCallArg = 13, 
		RULE_methodCallArrayRefString = 14, RULE_methodStr = 15, RULE_methodStrPart = 16, 
		RULE_componentDefinition = 17, RULE_componentItem = 18, RULE_stepDefinitionBody = 19, 
		RULE_stepDefinition = 20, RULE_stepDeclaration = 21, RULE_stepDeclarationBody = 22, 
		RULE_stepDeclarationSection = 23, RULE_stepDeclarationArgument = 24, RULE_stepDeclarationArgumentName = 25, 
		RULE_stepDeclarationTypeHint = 26, RULE_stepDeclarationSectionContent = 27;
	public static readonly string[] ruleNames = {
		"file", "entityDefinition", "appDefinition", "appItem", "traitDefinition", 
		"traitRefList", "traitItem", "methodDefinition", "methodDeclaration", 
		"methodDefArgs", "methodCallChain", "methodCall", "methodCallArgs", "methodCallArg", 
		"methodCallArrayRefString", "methodStr", "methodStrPart", "componentDefinition", 
		"componentItem", "stepDefinitionBody", "stepDefinition", "stepDeclaration", 
		"stepDeclarationBody", "stepDeclarationSection", "stepDeclarationArgument", 
		"stepDeclarationArgumentName", "stepDeclarationTypeHint", "stepDeclarationSectionContent"
	};

	private static readonly string[] _LiteralNames = {
		null, "'App:'", "'Trait:'", "'Component:'", "'Collection:'", "'traits:'", 
		"'name:'", "'components:'", "'inherits:'", "'Step:'", null, null, "'needs-defining'", 
		"'('", null, "'+'", null, "'->'", null, null, null, null, null, null, 
		null, null, null, "'['", "']'", null, null, null, "')'", null, "'<'", 
		"'\\\"'", null, null, null, null, "'>'", "'Given'", "'When'", "'Then'", 
		"'\\{'", "'\\}'", "'{'", "'}'", null, null, null, null, null, null, "'\\''", 
		"'''"
	};
	private static readonly string[] _SymbolicNames = {
		null, "APP_DEFINITION", "TRAIT_DEFINITION", "COMPONENT_DEFINITION", "COLLECTION_DEFINITION", 
		"TRAITS_KEYWORD", "NAME_KEYWORD", "COMPONENTS_KEYWORD", "INHERITS_KEYWORD", 
		"STEP_DEFINE", "LIST_SEPARATOR", "DEF_SEPARATOR", "NEEDS_DEFINING", "METHOD_OPEN", 
		"NAME_REF", "PLUS", "COMPONENT_INSERT", "FUNC_PASS_MARKER", "STRING", 
		"NEWLINE", "TEXT_DOC_COMMENT", "TEXT_COMMENT", "WS", "ERR_CHAR", "METHOD_STRING_START", 
		"CONSTANT", "PARAM_NAME", "ARR_LEFT", "ARR_RIGHT", "PARAM_SEPARATOR", 
		"FLOAT", "INT", "METHOD_CLOSE", "METH_WS", "STR_ANGLE_LEFT", "METHOD_STR_ESCAPE_QUOTE", 
		"METHOD_STRING_END", "METHOD_STRING_ERRNL", "STR_CONTENT", "STR_NAME_REF", 
		"STR_ANGLE_RIGHT", "DEF_GIVEN", "DEF_WHEN", "DEF_THEN", "DEF_ESCAPED_LCURLY", 
		"DEF_ESCAPED_RCURLY", "DEF_LCURLY", "DEF_RCURLY", "DEF_NEWLINE", "DEF_WS", 
		"DEF_COLON", "DEF_COMPONENT_INSERT", "DEF_WORD", "DEF_COMMENT", "SINGLE_METHOD_STR_ESCAPE_QUOTE", 
		"SINGLE_METHOD_STRING_END"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "AutoStepInteractionsParser.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static AutoStepInteractionsParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public AutoStepInteractionsParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public AutoStepInteractionsParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	internal partial class FileContext : ParserRuleContext {
		public ITerminalNode Eof() { return GetToken(AutoStepInteractionsParser.Eof, 0); }
		public EntityDefinitionContext[] entityDefinition() {
			return GetRuleContexts<EntityDefinitionContext>();
		}
		public EntityDefinitionContext entityDefinition(int i) {
			return GetRuleContext<EntityDefinitionContext>(i);
		}
		public FileContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_file; } }
		public override void EnterRule(IParseTreeListener listener) {
			IAutoStepInteractionsParserListener typedListener = listener as IAutoStepInteractionsParserListener;
			if (typedListener != null) typedListener.EnterFile(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IAutoStepInteractionsParserListener typedListener = listener as IAutoStepInteractionsParserListener;
			if (typedListener != null) typedListener.ExitFile(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IAutoStepInteractionsParserVisitor<TResult> typedVisitor = visitor as IAutoStepInteractionsParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFile(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FileContext file() {
		FileContext _localctx = new FileContext(Context, State);
		EnterRule(_localctx, 0, RULE_file);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 59;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << APP_DEFINITION) | (1L << TRAIT_DEFINITION) | (1L << COMPONENT_DEFINITION))) != 0)) {
				{
				{
				State = 56; entityDefinition();
				}
				}
				State = 61;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 62; Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	internal partial class EntityDefinitionContext : ParserRuleContext {
		public TraitDefinitionContext traitDefinition() {
			return GetRuleContext<TraitDefinitionContext>(0);
		}
		public ComponentDefinitionContext componentDefinition() {
			return GetRuleContext<ComponentDefinitionContext>(0);
		}
		public AppDefinitionContext appDefinition() {
			return GetRuleContext<AppDefinitionContext>(0);
		}
		public EntityDefinitionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_entityDefinition; } }
		public override void EnterRule(IParseTreeListener listener) {
			IAutoStepInteractionsParserListener typedListener = listener as IAutoStepInteractionsParserListener;
			if (typedListener != null) typedListener.EnterEntityDefinition(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IAutoStepInteractionsParserListener typedListener = listener as IAutoStepInteractionsParserListener;
			if (typedListener != null) typedListener.ExitEntityDefinition(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IAutoStepInteractionsParserVisitor<TResult> typedVisitor = visitor as IAutoStepInteractionsParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitEntityDefinition(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public EntityDefinitionContext entityDefinition() {
		EntityDefinitionContext _localctx = new EntityDefinitionContext(Context, State);
		EnterRule(_localctx, 2, RULE_entityDefinition);
		try {
			State = 67;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case TRAIT_DEFINITION:
				EnterOuterAlt(_localctx, 1);
				{
				State = 64; traitDefinition();
				}
				break;
			case COMPONENT_DEFINITION:
				EnterOuterAlt(_localctx, 2);
				{
				State = 65; componentDefinition();
				}
				break;
			case APP_DEFINITION:
				EnterOuterAlt(_localctx, 3);
				{
				State = 66; appDefinition();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	internal partial class AppDefinitionContext : ParserRuleContext {
		public ITerminalNode APP_DEFINITION() { return GetToken(AutoStepInteractionsParser.APP_DEFINITION, 0); }
		public ITerminalNode NAME_REF() { return GetToken(AutoStepInteractionsParser.NAME_REF, 0); }
		public AppItemContext[] appItem() {
			return GetRuleContexts<AppItemContext>();
		}
		public AppItemContext appItem(int i) {
			return GetRuleContext<AppItemContext>(i);
		}
		public AppDefinitionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_appDefinition; } }
		public override void EnterRule(IParseTreeListener listener) {
			IAutoStepInteractionsParserListener typedListener = listener as IAutoStepInteractionsParserListener;
			if (typedListener != null) typedListener.EnterAppDefinition(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IAutoStepInteractionsParserListener typedListener = listener as IAutoStepInteractionsParserListener;
			if (typedListener != null) typedListener.ExitAppDefinition(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IAutoStepInteractionsParserVisitor<TResult> typedVisitor = visitor as IAutoStepInteractionsParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAppDefinition(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public AppDefinitionContext appDefinition() {
		AppDefinitionContext _localctx = new AppDefinitionContext(Context, State);
		EnterRule(_localctx, 4, RULE_appDefinition);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 69; Match(APP_DEFINITION);
			State = 70; Match(NAME_REF);
			State = 74;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << NAME_KEYWORD) | (1L << COMPONENTS_KEYWORD) | (1L << STEP_DEFINE) | (1L << NAME_REF))) != 0)) {
				{
				{
				State = 71; appItem();
				}
				}
				State = 76;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	internal partial class AppItemContext : ParserRuleContext {
		public AppItemContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_appItem; } }
	 
		public AppItemContext() { }
		public virtual void CopyFrom(AppItemContext context) {
			base.CopyFrom(context);
		}
	}
	internal partial class AppTraitsContext : AppItemContext {
		public ITerminalNode COMPONENTS_KEYWORD() { return GetToken(AutoStepInteractionsParser.COMPONENTS_KEYWORD, 0); }
		public ITerminalNode[] NAME_REF() { return GetTokens(AutoStepInteractionsParser.NAME_REF); }
		public ITerminalNode NAME_REF(int i) {
			return GetToken(AutoStepInteractionsParser.NAME_REF, i);
		}
		public ITerminalNode[] LIST_SEPARATOR() { return GetTokens(AutoStepInteractionsParser.LIST_SEPARATOR); }
		public ITerminalNode LIST_SEPARATOR(int i) {
			return GetToken(AutoStepInteractionsParser.LIST_SEPARATOR, i);
		}
		public AppTraitsContext(AppItemContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IAutoStepInteractionsParserListener typedListener = listener as IAutoStepInteractionsParserListener;
			if (typedListener != null) typedListener.EnterAppTraits(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IAutoStepInteractionsParserListener typedListener = listener as IAutoStepInteractionsParserListener;
			if (typedListener != null) typedListener.ExitAppTraits(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IAutoStepInteractionsParserVisitor<TResult> typedVisitor = visitor as IAutoStepInteractionsParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAppTraits(this);
			else return visitor.VisitChildren(this);
		}
	}
	internal partial class AppStepContext : AppItemContext {
		public StepDefinitionBodyContext stepDefinitionBody() {
			return GetRuleContext<StepDefinitionBodyContext>(0);
		}
		public AppStepContext(AppItemContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IAutoStepInteractionsParserListener typedListener = listener as IAutoStepInteractionsParserListener;
			if (typedListener != null) typedListener.EnterAppStep(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IAutoStepInteractionsParserListener typedListener = listener as IAutoStepInteractionsParserListener;
			if (typedListener != null) typedListener.ExitAppStep(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IAutoStepInteractionsParserVisitor<TResult> typedVisitor = visitor as IAutoStepInteractionsParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAppStep(this);
			else return visitor.VisitChildren(this);
		}
	}
	internal partial class AppMethodContext : AppItemContext {
		public MethodDefinitionContext methodDefinition() {
			return GetRuleContext<MethodDefinitionContext>(0);
		}
		public AppMethodContext(AppItemContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IAutoStepInteractionsParserListener typedListener = listener as IAutoStepInteractionsParserListener;
			if (typedListener != null) typedListener.EnterAppMethod(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IAutoStepInteractionsParserListener typedListener = listener as IAutoStepInteractionsParserListener;
			if (typedListener != null) typedListener.ExitAppMethod(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IAutoStepInteractionsParserVisitor<TResult> typedVisitor = visitor as IAutoStepInteractionsParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAppMethod(this);
			else return visitor.VisitChildren(this);
		}
	}
	internal partial class AppNameContext : AppItemContext {
		public ITerminalNode NAME_KEYWORD() { return GetToken(AutoStepInteractionsParser.NAME_KEYWORD, 0); }
		public ITerminalNode STRING() { return GetToken(AutoStepInteractionsParser.STRING, 0); }
		public AppNameContext(AppItemContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IAutoStepInteractionsParserListener typedListener = listener as IAutoStepInteractionsParserListener;
			if (typedListener != null) typedListener.EnterAppName(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IAutoStepInteractionsParserListener typedListener = listener as IAutoStepInteractionsParserListener;
			if (typedListener != null) typedListener.ExitAppName(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IAutoStepInteractionsParserVisitor<TResult> typedVisitor = visitor as IAutoStepInteractionsParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAppName(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public AppItemContext appItem() {
		AppItemContext _localctx = new AppItemContext(Context, State);
		EnterRule(_localctx, 6, RULE_appItem);
		int _la;
		try {
			State = 90;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case NAME_KEYWORD:
				_localctx = new AppNameContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 77; Match(NAME_KEYWORD);
				State = 78; Match(STRING);
				}
				break;
			case COMPONENTS_KEYWORD:
				_localctx = new AppTraitsContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 79; Match(COMPONENTS_KEYWORD);
				State = 80; Match(NAME_REF);
				State = 85;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				while (_la==LIST_SEPARATOR) {
					{
					{
					State = 81; Match(LIST_SEPARATOR);
					State = 82; Match(NAME_REF);
					}
					}
					State = 87;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				}
				}
				break;
			case NAME_REF:
				_localctx = new AppMethodContext(_localctx);
				EnterOuterAlt(_localctx, 3);
				{
				State = 88; methodDefinition();
				}
				break;
			case STEP_DEFINE:
				_localctx = new AppStepContext(_localctx);
				EnterOuterAlt(_localctx, 4);
				{
				State = 89; stepDefinitionBody();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	internal partial class TraitDefinitionContext : ParserRuleContext {
		public ITerminalNode TRAIT_DEFINITION() { return GetToken(AutoStepInteractionsParser.TRAIT_DEFINITION, 0); }
		public TraitRefListContext traitRefList() {
			return GetRuleContext<TraitRefListContext>(0);
		}
		public TraitItemContext[] traitItem() {
			return GetRuleContexts<TraitItemContext>();
		}
		public TraitItemContext traitItem(int i) {
			return GetRuleContext<TraitItemContext>(i);
		}
		public TraitDefinitionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_traitDefinition; } }
		public override void EnterRule(IParseTreeListener listener) {
			IAutoStepInteractionsParserListener typedListener = listener as IAutoStepInteractionsParserListener;
			if (typedListener != null) typedListener.EnterTraitDefinition(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IAutoStepInteractionsParserListener typedListener = listener as IAutoStepInteractionsParserListener;
			if (typedListener != null) typedListener.ExitTraitDefinition(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IAutoStepInteractionsParserVisitor<TResult> typedVisitor = visitor as IAutoStepInteractionsParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTraitDefinition(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TraitDefinitionContext traitDefinition() {
		TraitDefinitionContext _localctx = new TraitDefinitionContext(Context, State);
		EnterRule(_localctx, 8, RULE_traitDefinition);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 92; Match(TRAIT_DEFINITION);
			State = 93; traitRefList();
			State = 97;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << NAME_KEYWORD) | (1L << STEP_DEFINE) | (1L << NAME_REF))) != 0)) {
				{
				{
				State = 94; traitItem();
				}
				}
				State = 99;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	internal partial class TraitRefListContext : ParserRuleContext {
		public ITerminalNode[] NAME_REF() { return GetTokens(AutoStepInteractionsParser.NAME_REF); }
		public ITerminalNode NAME_REF(int i) {
			return GetToken(AutoStepInteractionsParser.NAME_REF, i);
		}
		public ITerminalNode[] PLUS() { return GetTokens(AutoStepInteractionsParser.PLUS); }
		public ITerminalNode PLUS(int i) {
			return GetToken(AutoStepInteractionsParser.PLUS, i);
		}
		public TraitRefListContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_traitRefList; } }
		public override void EnterRule(IParseTreeListener listener) {
			IAutoStepInteractionsParserListener typedListener = listener as IAutoStepInteractionsParserListener;
			if (typedListener != null) typedListener.EnterTraitRefList(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IAutoStepInteractionsParserListener typedListener = listener as IAutoStepInteractionsParserListener;
			if (typedListener != null) typedListener.ExitTraitRefList(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IAutoStepInteractionsParserVisitor<TResult> typedVisitor = visitor as IAutoStepInteractionsParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTraitRefList(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TraitRefListContext traitRefList() {
		TraitRefListContext _localctx = new TraitRefListContext(Context, State);
		EnterRule(_localctx, 10, RULE_traitRefList);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 100; Match(NAME_REF);
			State = 105;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==PLUS) {
				{
				{
				State = 101; Match(PLUS);
				State = 102; Match(NAME_REF);
				}
				}
				State = 107;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
